--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "dependencies": {
     "@sap/cds": "^7",
     "@sap/cds-common-content": "^1.2.0",
-    "express": "^4"
+    "express": "^4",
+    "@sap/cds-hana": "^2",
+    "@sap/xssec": "^3",
+    "passport": "^0"
   },
   "devDependencies": {
     "@sap/ux-specification": "^1.108.9",
@@ -20,5 +23,16 @@
   },
   "sapux": [
     "app/listreport"
-  ]
+  ],
+  "cds": {
+    "requires": {
+      "[production]": {
+        "db": "hana",
+        "auth": "xsuaa"
+      },
+      "[hybrid]": {
+        "db": "hana"
+      }
+    }
+  }
 }
