--- a/app/listreport/webapp/manifest.json
+++ b/app/listreport/webapp/manifest.json
@@ -114,6 +114,7 @@
           "options": {
             "settings": {
               "entitySet": "Books",
+              "initialLoad": "Enabled",
               "variantManagement": "Page",
               "navigation": {
                 "Books": {
