--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
   "dependencies": {
     "@sap/cds": "^7",
     "@sap/cds-common-content": "^1.2.0",
-    "express": "^4",
     "@sap/cds-hana": "^2",
     "@sap/xssec": "^3",
+    "express": "^4",
     "passport": "^0"
   },
   "devDependencies": {
     "@sap/ux-specification": "^1.108.9",
+    "axios": "^1.5.0",
+    "chai": "^4.3.8",
+    "chai-as-promised": "^7.1.1",
+    "chai-subset": "^1.6.0",
+    "jest": "^29.7.0",
     "sqlite3": "^5"
   },
   "scripts": {
     "start": "cds-serve",
+    "test": "npx jest --silent",
     "watch-listreport": "cds watch --open listreport/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "sapux": [
